--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,8 @@ body {
 .texto-rosa {
     color: rgb(235, 18, 170);
 }
+.texto-rosa:hover{
+    font-weight: bold;
+    font-size: 20px;
+    cursor: wait;
+}
